Adds detection for Electronia brand and Electronia MB110

--- a/regexes/device/televisions.yml
+++ b/regexes/device/televisions.yml
@@ -90,6 +90,14 @@ DMM:
   device: 'tv'
   model: 'Dreambox'
 
+# Electronia
+Electronia:
+  regex: 'ELECTRONIA'
+  device: 'tv'
+  models:
+    - regex: 'MB110'
+      model: 'MB110'
+
 # Finlux
 Finlux:
   regex: 'FINLUX[;,]'
