Adds detection for WELLINGTON brand and WELLINGTON MB211

--- a/regexes/device/televisions.yml
+++ b/regexes/device/televisions.yml
@@ -484,6 +484,14 @@ VOX:
     - regex: 'MB130'
       model: 'MB130'
 
+# WELLINGTON
+WELLINGTON:
+  regex: 'WELLINGTON'
+  device: 'tv'
+  models:
+    - regex: 'MB211'
+      model: 'MB211'
+
 # X.Vision
 X.Vision:
   regex: 'X-VISION[;,]'
