--- a/Tests/fixtures/tv.yml
+++ b/Tests/fixtures/tv.yml
@@ -7812,3 +7812,21 @@
     model: MB110
   os_family: GNU/Linux
   browser_family: Opera
+- 
+  user_agent: Mozilla/5.0 (Linux armv7l) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/53.0.2785.143 Safari/537.36 OPR/40.0.2207.0 OMI/4.9.0.237.DOM3.223 Model/Vestel-MB211 VSTVB MB200 HbbTV/1.2.1 (; WELLINGTON; MB211; 0.59.2.2; _TV_NT72563_2017;) SmartTvA/3.0.0
+  os:
+    name: GNU/Linux
+    version: ""
+    platform: ARM
+  client:
+    type: browser
+    name: Opera Devices
+    version: 4.9.0.237
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: WELLINGTON
+    model: MB211
+  os_family: GNU/Linux
+  browser_family: Opera
