Adds detection for REGAL brand and REGAL MB211

--- a/regexes/device/televisions.yml
+++ b/regexes/device/televisions.yml
@@ -312,6 +312,14 @@ Polaroid:
   device: 'tv'
   model: ''
 
+# REGAL
+REGAL:
+  regex: 'REGAL'
+  device: 'tv'
+  models:
+    - regex: 'MB211'
+      model: 'MB211'
+
 # Saba
 Saba:
   regex: 'Saba'
