--- a/Tests/fixtures/tv.yml
+++ b/Tests/fixtures/tv.yml
@@ -7866,3 +7866,21 @@
     model: 43S4900
   os_family: GNU/Linux
   browser_family: Opera
+- 
+  user_agent: Opera/9.80 (X11;Linux armv7i;NETRANGEMMH;HbbTV/1.1.1;CE-HTML/1.0;Vendor/HITACHI;SW-Version/V8-T56FT05-LF1V313;Cnt/GBR;Lan/eng;U;en) AppleWebKit/534.24 (KHTML, like Gecko) Safari/534.24, Digital-TV/V8-T56FT05-LF1V313 (HITACHI,49D2900,wireless)
+  os:
+    name: GNU/Linux
+    version: ""
+    platform: ARM
+  client:
+    type: browser
+    name: Opera
+    version: "9.80"
+    engine: Presto
+    engine_version: ""
+  device:
+    type: tv
+    brand: Hitachi
+    model: 49D2900
+  os_family: GNU/Linux
+  browser_family: Opera
