Adds detection for Lifemaxx brand and Lifemaxx MB120

--- a/Tests/fixtures/tv.yml
+++ b/Tests/fixtures/tv.yml
@@ -7884,3 +7884,21 @@
     model: 49D2900
   os_family: GNU/Linux
   browser_family: Opera
+- 
+  user_agent: Mozilla/5.0 (Linux armv7l) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/44.0.2403.130 Safari/537.36 OPR/31.0.1890.0 OMI/4.6.1.40.Dominik2.175 VSTVB MB100 HbbTV/1.2.1 (; LIFEMAXX; MB120; 2.29.6.0; ;) SmartTvA/3.0.0
+  os:
+    name: GNU/Linux
+    version: ""
+    platform: ARM
+  client:
+    type: browser
+    name: Opera Devices
+    version: 4.6.1.40
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: Lifemaxx
+    model: MB120
+  os_family: GNU/Linux
+  browser_family: Opera
