--- a/regexes/device/televisions.yml
+++ b/regexes/device/televisions.yml
@@ -230,6 +230,14 @@ LG:
     - regex: 'LGE;? ?([0-9]{2}[A-Z]{2}[0-9]{2,4}[A-Z]?)'
       model: '$1'
 
+# Lifemaxx
+Lifemaxx:
+  regex: 'Lifemaxx'
+  device: 'tv'
+  models:
+    - regex: 'MB120'
+      model: 'MB120'
+
 # Linsar
 Linsar:
   regex: 'LINSAR[;,]'
