--- a/Tests/fixtures/tv.yml
+++ b/Tests/fixtures/tv.yml
@@ -7902,3 +7902,21 @@
     model: MB120
   os_family: GNU/Linux
   browser_family: Opera
+- 
+  user_agent: Opera/9.80 (X11;Linux armv7i;NETRANGEMMH;HbbTV/1.1.1;CE-HTML/1.0;Vendor/TCL;SW-Version/V8-T56FT05-LF1V307;Cnt/GBR;Lan/eng;U;en) AppleWebKit/534.24 (KHTML, like Gecko) Safari/534.24, Digital-TV/V8-T56FT05-LF1V307 (TCL,32S4900,wireless)
+  os:
+    name: GNU/Linux
+    version: ""
+    platform: ARM
+  client:
+    type: browser
+    name: Opera
+    version: "9.80"
+    engine: Presto
+    engine_version: ""
+  device:
+    type: tv
+    brand: TCL
+    model: 32S4900
+  os_family: GNU/Linux
+  browser_family: Opera
