--- a/regexes/device/televisions.yml
+++ b/regexes/device/televisions.yml
@@ -274,6 +274,14 @@ Medion:
     - regex: '(MB[0-9]{2})'
       model: '$1'
 
+# Miray
+Miray:
+  regex: 'MIRAY'
+  device: 'tv'
+  models:
+    - regex: 'LEDM-322NIP'
+      model: 'LEDM-322NIP'
+
 # Nordmende
 Nordmende:
   regex: 'NORDMENDE[;,]'
