--- a/regexes/device/televisions.yml
+++ b/regexes/device/televisions.yml
@@ -455,7 +455,7 @@ TCL:
   regex: 'TCL'
   device: 'tv'
   models:
-    - regex: '(32D1820|(?:32|43)S4900)'
+    - regex: '(32D1820|32D2930|(?:32|43)S4900)'
       model: '$1'
     - regex: '(LF1V[0-9]{3})'
       model: '$1'
