Adds detection for ALDI NORD brand

--- a/regexes/device/televisions.yml
+++ b/regexes/device/televisions.yml
@@ -16,6 +16,12 @@ Airties:
     - regex: 'Airties; ?([^);/]+)'
       model: '$1'
 
+# ALDI NORD
+'ALDI NORD':
+  regex: 'ALDINORD[;,]'
+  device: 'tv'
+  model: ''
+
 # ALDI SÜD
 'ALDI SÜD':
   regex: 'ALDISUED[;,]'
