--- a/Tests/fixtures/tv.yml
+++ b/Tests/fixtures/tv.yml
@@ -7956,3 +7956,21 @@
     model: 32D2930
   os_family: GNU/Linux
   browser_family: Opera
+- 
+  user_agent: Mozilla/5.0 (Linux armv7l) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/53.0.2785.143 Safari/537.36 OPR/40.0.2207.0 OMI/4.9.0.237.DOM3-OPT.235 Model/Vestel-MB130 VSTVB MB100 HbbTV/1.2.1 (; ALDINORD; MB130; 3.62.35.1; _TV_G10_2017;) SmartTvA/3.0.0 CE-HTML/1.0 FXM-U2FsdGVkX1 oZew0140/QBCrdEn7eNAOlzEcueaamEeYhwCdPcr3KYTZseEcEJqh-END
+  os:
+    name: GNU/Linux
+    version: ""
+    platform: ARM
+  client:
+    type: browser
+    name: Opera Devices
+    version: 4.9.0.237
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: ALDI NORD
+    model: ""
+  os_family: GNU/Linux
+  browser_family: Opera
