--- a/regexes/device/televisions.yml
+++ b/regexes/device/televisions.yml
@@ -233,6 +233,8 @@ LG:
       model: '$1'
     - regex: '(OLED[0-9]{2}[A-Z][0-9][A-Z])'
       model: '$1'
+    - regex: '43UK6400PLF'
+      model: '43UK6400PLF'
     - regex: 'LGE;? ?([0-9]{2}[A-Z]{2}[0-9]{2,4}[A-Z]?)'
       model: '$1'
 
