Adds detection for Sony KD-43X8305C

--- a/Tests/fixtures/tv.yml
+++ b/Tests/fixtures/tv.yml
@@ -8010,3 +8010,21 @@
     model: 43UK6400PLF
   os_family: Other Mobile
   browser_family: Chrome
+- 
+  user_agent: Mozilla/5.0 (Linux armv7l) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/35.0.1916.153 Safari/537.36 OPR/22.0.1481.0 OMI/4.2.12.48.ALSAN3.122 HbbTV/1.1.1 (; Sony; KD-43X8305C; v1.000; 2015;) sony.hbbtv.tv.2015HE
+  os:
+    name: GNU/Linux
+    version: ""
+    platform: ARM
+  client:
+    type: browser
+    name: Opera Devices
+    version: 4.2.12.48
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: Sony
+    model: KD-43X8305C
+  os_family: GNU/Linux
+  browser_family: Opera
