--- a/regexes/device/televisions.yml
+++ b/regexes/device/televisions.yml
@@ -417,6 +417,8 @@ Sony:
   regex: 'Sony'
   device: 'tv'
   models:
+    - regex: 'KD-43X8305C'
+      model: 'KD-43X8305C'
     - regex: '(KDL?-?[0-9]{2}[A-Z]{1,2}[0-9]{1,5})'
       model: '$1'
 
