Adds detection for LG 43UM71007LB and improves version detection for webOS

--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -1728,3 +1728,10 @@
     short_name: FEN
     version: ""
     platform: ""
+- 
+  user_agent: Mozilla/5.0 (WebOS; Linux/SmartTV) AppleWebKit/537.36 (KHTML, likeGecko) Chrome/53.0.2785.34 Safari/537.36 HbbTV/1.4.1 ( DRM; LGE; 43UM71007LB; WEBOS4.5 03.50.90; W45_K5LP; DTV_W19P;)
+  os:
+    name: webOS
+    short_name: WOS
+    version: "4.5"
+    platform: ""
