--- a/regexes/device/televisions.yml
+++ b/regexes/device/televisions.yml
@@ -235,6 +235,8 @@ LG:
       model: '$1'
     - regex: '43UK6400PLF'
       model: '43UK6400PLF'
+    - regex: '43UM71007LB'
+      model: '43UM71007LB'
     - regex: 'LGE;? ?([0-9]{2}[A-Z]{2}[0-9]{2,4}[A-Z]?)'
       model: '$1'
 
