--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -224,6 +224,10 @@
 ##########
 # webOS
 ##########
+- regex: 'WEBOS(\d+[\.\d]+)'
+  name: 'webOS'
+  version: '$1'
+
 - regex: '(?:Web0S; .*WEBOS|webOS|web0S|Palm webOS)(?:[/]?(\d+[\.\d]+))?'
   name: 'webOS'
   version: '$1'
