Improves detection for Essentielb

--- a/regexes/device/televisions.yml
+++ b/regexes/device/televisions.yml
@@ -104,6 +104,12 @@ Electronia:
     - regex: 'MB110'
       model: 'MB110'
 
+# Essentielb
+Essentielb:
+  regex: 'ESSENTIELB[;,]'
+  device: 'tv'
+  model: ''
+
 # Finlux
 Finlux:
   regex: 'FINLUX[;,]'
