Improves detection for Vestel

--- a/regexes/device/televisions.yml
+++ b/regexes/device/televisions.yml
@@ -564,7 +564,7 @@ X.Vision:
 
 # Vestel
 Vestel:
-  regex: '(<!Model/)Vestel'
+  regex: 'Vestel.+VESTEL'
   device: 'tv'
   models:
     - regex: '(MB[0-9]{2})'
