Improves detection for Hi-Level

--- a/regexes/device/televisions.yml
+++ b/regexes/device/televisions.yml
@@ -146,6 +146,12 @@ Haier:
     - regex: 'MB110'
       model: 'MB110'
 
+# Hi-Level
+Hi-Level:
+  regex: 'HI-LEVEL[;,]'
+  device: 'tv'
+  model: ''
+
 # Hisense
 Hisense:
   regex: 'Hisense'
