--- a/regexes/device/televisions.yml
+++ b/regexes/device/televisions.yml
@@ -570,7 +570,7 @@ X.Vision:
 
 # Vestel
 Vestel:
-  regex: 'Vestel.+VESTEL'
+  regex: '(?:Vestel.+VESTEL|VESTEL;)'
   device: 'tv'
   models:
     - regex: '(MB[0-9]{2})'
