Improves detection for Hyundai

--- a/regexes/device/televisions.yml
+++ b/regexes/device/televisions.yml
@@ -194,6 +194,12 @@ Humax:
     - regex: 'Humax; ([^);/]+)'
       model: '$1'
 
+# Hyundai
+Hyundai:
+  regex: 'HYUNDAI[;,]'
+  device: 'tv'
+  model: ''
+
 # IKEA
 Ikea:
   regex: 'Ikea'
