Adds detection for TCL 55D2900

--- a/regexes/device/televisions.yml
+++ b/regexes/device/televisions.yml
@@ -511,7 +511,7 @@ TCL:
   regex: 'TCL'
   device: 'tv'
   models:
-    - regex: '(32D1820|39D2900|32D2930|(?:32|43)S4900)'
+    - regex: '(32D1820|(?:39|55)D2900|32D2930|(?:32|43)S4900)'
       model: '$1'
     - regex: '(LF1V[0-9]{3})'
       model: '$1'
