--- a/Tests/fixtures/tv.yml
+++ b/Tests/fixtures/tv.yml
@@ -8223,3 +8223,21 @@
     model: ""
   os_family: GNU/Linux
   browser_family: Opera
+- 
+  user_agent: Mozilla/5.0 (Web0S; Linux/SmartTV) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/53.0.2785.34 Safari/537.36 HbbTV/1.4.1 ( DRM CPAS 2.0.1; LGE; OLED65C8PLA; WEBOS4.0 05.20.02; W4_O18; W4_O18;)
+  os:
+    name: webOS
+    version: "4.0"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 53.0.2785.34
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: LG
+    model: OLED65C8PLA
+  os_family: Other Mobile
+  browser_family: Chrome
