--- a/regexes/device/televisions.yml
+++ b/regexes/device/televisions.yml
@@ -261,14 +261,16 @@ LG:
   regex: 'LGE'
   device: 'tv'
   models:
-    - regex: '(NetCast [0-9]{1}.[0-9]{1}|GLOBAL_PLAT3)'
-      model: '$1'
-    - regex: '(OLED[0-9]{2}[A-Z][0-9][A-Z])'
-      model: '$1'
     - regex: '43UK6400PLF'
       model: '43UK6400PLF'
     - regex: '43UM71007LB'
       model: '43UM71007LB'
+    - regex: 'OLED65C8PLA'
+      model: 'OLED65C8PLA'
+    - regex: '(NetCast [0-9]{1}.[0-9]{1}|GLOBAL_PLAT3)'
+      model: '$1'
+    - regex: '(OLED[0-9]{2}[A-Z][0-9][A-Z])'
+      model: '$1'
     - regex: 'LGE;? ?([0-9]{2}[A-Z]{2}[0-9]{2,4}[A-Z]?)'
       model: '$1'
 
