Adds detection for PROFiLO brand

--- a/regexes/device/televisions.yml
+++ b/regexes/device/televisions.yml
@@ -380,6 +380,12 @@ Polaroid:
   device: 'tv'
   model: ''
 
+# PROFiLO
+PROFiLO:
+  regex: 'PROFILO[;,]'
+  device: 'tv'
+  model: ''
+
 # Qilive
 Qilive:
   regex: 'QILIVE[;,]'
