Adds detection for Haier LE55X7000U

--- a/Tests/fixtures/tv.yml
+++ b/Tests/fixtures/tv.yml
@@ -8259,3 +8259,21 @@
     model: ""
   os_family: GNU/Linux
   browser_family: Opera
+- 
+  user_agent: Mozilla/5.0 (Linux; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/39.0.2171.71 Safari/537.36 SRAF/3.6 HbbTV/1.2.1 (; Haier; LE55X7000U; v3.6; v1.0; 2017); CE-HTML/1.0
+  os:
+    name: GNU/Linux
+    version: ""
+    platform: x64
+  client:
+    type: browser
+    name: Seraphic Sraf
+    version: "3.6"
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: Haier
+    model: LE55X7000U
+  os_family: GNU/Linux
+  browser_family: Chrome
