--- a/regexes/device/televisions.yml
+++ b/regexes/device/televisions.yml
@@ -140,11 +140,13 @@ Grundig:
 
 # Haier
 Haier:
-  regex: 'HHW_HAIER'
+  regex: '(?:HHW_)?HAIER'
   device: 'tv'
   models:
     - regex: 'MB110'
       model: 'MB110'
+    - regex: 'LE55X7000U'
+      model: 'LE55X7000U'
 
 # Hi-Level
 Hi-Level:
