Adds detection for Blaupunkt LC-65CUG8052E

--- a/Tests/fixtures/tv.yml
+++ b/Tests/fixtures/tv.yml
@@ -8277,3 +8277,21 @@
     model: LE55X7000U
   os_family: GNU/Linux
   browser_family: Chrome
+- 
+  user_agent: Mozilla/5.0 (Linux; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/39.0.2171.71 Safari/537.36 SRAF/3.5 HbbTV/1.2.1 (; Blaupunkt_UMC; LC-65CUG8052E; V4.72; v1.0; ); CE-HTML/1.0 FXM-U2FsdGVkX19VWEb o0R0Sz0aPdZqc1iIMdalc240mN5Vg dw8pkC0QmQcbGPSx5F-END
+  os:
+    name: GNU/Linux
+    version: ""
+    platform: x64
+  client:
+    type: browser
+    name: Seraphic Sraf
+    version: "3.5"
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: Blaupunkt
+    model: LC-65CUG8052E
+  os_family: GNU/Linux
+  browser_family: Chrome
