--- a/regexes/device/televisions.yml
+++ b/regexes/device/televisions.yml
@@ -58,6 +58,14 @@ BangOlufsen:
   device: 'tv'
   model: 'BeoVision'
 
+# Blaupunkt
+Blaupunkt:
+  regex: 'Blaupunkt_UMC[;,]'
+  device: 'tv'
+  models:
+    - regex: 'LC-65CUG8052E'
+      model: 'LC-65CUG8052E'
+
 # Bush
 Bush:
   regex: 'BUSH[;,]'
