Adds detection for FU brand

--- a/regexes/device/televisions.yml
+++ b/regexes/device/televisions.yml
@@ -124,6 +124,12 @@ Finlux:
   device: 'tv'
   model: ''
 
+# FU
+FU:
+  regex: 'FU[;,]'
+  device: 'tv'
+  model: ''
+
 # Fuego
 Fuego:
   regex: 'FUEGO'
