Adds detection for TOKYO brand and TOKYO TOKTCLED32S

--- a/Tests/fixtures/tv.yml
+++ b/Tests/fixtures/tv.yml
@@ -8313,3 +8313,21 @@
     model: ""
   os_family: GNU/Linux
   browser_family: Opera
+- 
+  user_agent: Opera/9.80 (X11;Linux armv7i;NETRANGEMMH;HbbTV/1.1.1;CE-HTML/1.0;Vendor/TOKYO;SW-Version/V8-MT56BLA-LF1V146;Cnt/GBR;Lan/eng;U;en) AppleWebKit/534.24 (KHTML, like Gecko) Safari/534.24, Digital-TV/V8-MT56BLA-LF1V146 (TOKYO,TOKTCLED32S,wireless)
+  os:
+    name: GNU/Linux
+    version: ""
+    platform: ARM
+  client:
+    type: browser
+    name: Opera
+    version: "9.80"
+    engine: Presto
+    engine_version: ""
+  device:
+    type: tv
+    brand: TOKYO
+    model: TOKTCLED32S
+  os_family: GNU/Linux
+  browser_family: Opera
