--- a/regexes/device/televisions.yml
+++ b/regexes/device/televisions.yml
@@ -568,6 +568,14 @@ Thomson:
     - regex: '40FB5426'
       model: '40FB5426'
 
+# TOKYO
+TOKYO:
+  regex: 'TOKYO[;,]'
+  device: 'tv'
+  models:
+    - regex: 'TOKTCLED32S'
+      model: 'TOKTCLED32S'
+
 # Toshiba
 Toshiba:
   regex: 'Toshiba'
