Adds detection for SCBC brand and SCBC SCBC586

--- a/regexes/device/televisions.yml
+++ b/regexes/device/televisions.yml
@@ -442,6 +442,14 @@ Samsung:
     - regex: 'Maple_2011'
       model: 'Smart TV 2011'
 
+# SCBC
+SCBC:
+  regex: 'SCBC[;,]'
+  device: 'tv'
+  models:
+    - regex: 'SCBC586'
+      model: 'SCBC586'
+
 # SEG
 SEG:
   regex: 'SEG[;,]'
