Adds detection for SCBC 43D1850

--- a/Tests/fixtures/tv.yml
+++ b/Tests/fixtures/tv.yml
@@ -8349,3 +8349,21 @@
     model: SCBC586
   os_family: GNU/Linux
   browser_family: Chrome
+- 
+  user_agent: Mozilla/5.0 (Linux; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/39.0.2171.71 Safari/537.36 SRAF/3.6 HbbTV/1.2.1 (; SCBC; 43D1850; V8-MS586NA-LF1V015; v1.0; 2017); CE-HTML/1.0 FXM-U2FsdGVkX1 Uw45LmWObO4CbjLJDnO/tZe5Lfui3TYV61sZIjrwrpy29D30Dv1s1-END
+  os:
+    name: GNU/Linux
+    version: ""
+    platform: x64
+  client:
+    type: browser
+    name: Seraphic Sraf
+    version: "3.6"
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: SCBC
+    model: 43D1850
+  os_family: GNU/Linux
+  browser_family: Chrome
