Adds detection for Sharp BLA-43

--- a/regexes/device/televisions.yml
+++ b/regexes/device/televisions.yml
@@ -479,6 +479,8 @@ Sharp:
       model: '$1'
     - regex: 'LC-([^);/]+)'
       model: 'LC-$1'
+    - regex: 'BLA-43'
+      model: 'BLA-43'
 
 # Skyworth
 Skyworth:
