--- a/regexes/device/televisions.yml
+++ b/regexes/device/televisions.yml
@@ -438,9 +438,9 @@ Samsung:
     - regex: 'SmartTV(201[2-9]|202[0-1]):([^);/]+)'
       model: '$2'
     - regex: 'SmartTV(201[2-9]|202[0-1])'
-      model: 'Smart TV $1'
+      model: 'Smart TV ($1)'
     - regex: 'Maple_2011'
-      model: 'Smart TV 2011'
+      model: 'Smart TV (2011)'
 
 # SCBC
 SCBC:
