--- a/Tests/fixtures/tv.yml
+++ b/Tests/fixtures/tv.yml
@@ -8385,3 +8385,13 @@
     model: BLA-43
   os_family: GNU/Linux
   browser_family: Chrome
+- 
+  user_agent: HbbTV/1.2.1 (;Panasonic;VIERA 2014;3.062;8101-0003 0004-0000;)
+  os: [ ]
+  client: null
+  device:
+    type: tv
+    brand: Panasonic
+    model: VIERA (2014)
+  os_family: Unknown
+  browser_family: Unknown
