--- a/Tests/fixtures/tv.yml
+++ b/Tests/fixtures/tv.yml
@@ -3640,7 +3640,7 @@
   device:
     type: tv
     brand: Panasonic
-    model: VIERA 2011
+    model: VIERA (2011)
   os_family: Unknown
   browser_family: Unknown
 - 
@@ -3650,7 +3650,7 @@
   device:
     type: tv
     brand: Panasonic
-    model: VIERA 2012
+    model: VIERA (2012)
   os_family: Unknown
   browser_family: Unknown
 - 
@@ -3660,7 +3660,7 @@
   device:
     type: tv
     brand: Panasonic
-    model: VIERA 2013
+    model: VIERA (2013)
   os_family: Unknown
   browser_family: Unknown
 - 
@@ -8393,5 +8393,25 @@
     type: tv
     brand: Panasonic
     model: VIERA (2014)
+  os_family: Unknown
+  browser_family: Unknown
+- 
+  user_agent: HbbTV/1.2.1 (;Panasonic;VIERA 2015;31.005;8501-0003 0002-0000;)
+  os: [ ]
+  client: null
+  device:
+    type: tv
+    brand: Panasonic
+    model: VIERA (2015)
+  os_family: Unknown
+  browser_family: Unknown
+- 
+  user_agent: HbbTV/1.2.1 (;Panasonic;VIERA 2017;3.211;0201-0003 0000-0800;)
+  os: [ ]
+  client: null
+  device:
+    type: tv
+    brand: Panasonic
+    model: VIERA (2017)
   os_family: Unknown
   browser_family: Unknown
