--- a/regexes/device/televisions.yml
+++ b/regexes/device/televisions.yml
@@ -365,9 +365,9 @@ Panasonic:
   regex: 'Panasonic'
   device: 'tv'
   models:
-    - regex: 'VIERA (201[4567])'
+    - regex: 'VIERA (201[1234567])'
       model: 'VIERA ($1)'
-    - regex: '(VIERA [0-9]{1,4})|(DIGA [A-Z]{1}[0-9]{4})'
+    - regex: '(DIGA [A-Z]{1}[0-9]{4})'
       model: '$1'
     - regex: 'DIGA Webkit ([A-Z]{1}[0-9]{4})'
       model: 'DIGA $1'
