--- a/Tests/fixtures/tv.yml
+++ b/Tests/fixtures/tv.yml
@@ -8415,3 +8415,13 @@
     model: VIERA (2017)
   os_family: Unknown
   browser_family: Unknown
+- 
+  user_agent: HbbTV/1.4.1 (;Panasonic;VIERA 2019;d.704;4b01-0003 0040-0000;) PanasonicSDK/2017
+  os: [ ]
+  client: null
+  device:
+    type: tv
+    brand: Panasonic
+    model: VIERA (2019)
+  os_family: Unknown
+  browser_family: Unknown
