--- a/regexes/device/televisions.yml
+++ b/regexes/device/televisions.yml
@@ -365,7 +365,7 @@ Panasonic:
   regex: 'Panasonic'
   device: 'tv'
   models:
-    - regex: 'VIERA (201[1234567])'
+    - regex: 'VIERA (201[1-9])'
       model: 'VIERA ($1)'
     - regex: '(DIGA [A-Z]{1}[0-9]{4})'
       model: '$1'
