--- a/Tests/fixtures/tv.yml
+++ b/Tests/fixtures/tv.yml
@@ -8425,3 +8425,21 @@
     model: VIERA (2019)
   os_family: Unknown
   browser_family: Unknown
+- 
+  user_agent: Mozilla/5.0 (Linux armv7l) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/35.0.1916.153 Safari/537.36 OPR/22.0.1481.0 OMI/4.2.12.48.ALSAN3.129 HbbTV/1.2.1 (; Sony; KD-49X8005C; v5.381; 2015;) sony.hbbtv.tv.2015HE
+  os:
+    name: GNU/Linux
+    version: ""
+    platform: ARM
+  client:
+    type: browser
+    name: Opera Devices
+    version: 4.2.12.48
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: Sony
+    model: KD-49X8005C
+  os_family: GNU/Linux
+  browser_family: Opera
