Adds detection for Sony KDL-40W660E

--- a/Tests/fixtures/tv.yml
+++ b/Tests/fixtures/tv.yml
@@ -8443,3 +8443,21 @@
     model: KD-49X8005C
   os_family: GNU/Linux
   browser_family: Opera
+- 
+  user_agent: 'Mozilla/5.0 (Linux armv7l) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/49.0.2623.112 Safari/537.36 OPR/36.0.2128.0 OMI/4.8.0.129.PIXEL_UNICORN2.21 HbbTV/1.4.1 ( DRM;Sony; KDL-40W660E; v0.139-1000; ;2017LE;) FVC/2.0 (Sony;2017LE;)  sony.hbbtv.tv.2017LE'
+  os:
+    name: GNU/Linux
+    version: ""
+    platform: ARM
+  client:
+    type: browser
+    name: Opera Devices
+    version: 4.8.0.129
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: Sony
+    model: KDL-40W660E
+  os_family: GNU/Linux
+  browser_family: Opera
