--- a/regexes/device/televisions.yml
+++ b/regexes/device/televisions.yml
@@ -511,6 +511,8 @@ Sony:
       model: 'KD-43X8305C'
     - regex: 'KD-49X8005C'
       model: 'KD-49X8005C'
+    - regex: 'KDL-40W660E'
+      model: 'KDL-40W660E'
     - regex: '(KDL?-?[0-9]{2}[A-Z]{1,2}[0-9]{1,5})'
       model: '$1'
 
