Improves detection for Hisense

--- a/Tests/fixtures/tv.yml
+++ b/Tests/fixtures/tv.yml
@@ -8461,3 +8461,21 @@
     model: KDL-40W660E
   os_family: GNU/Linux
   browser_family: Opera
+- 
+  user_agent: Mozilla/5.0 (Linux armv7l) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/77.0.3865.120 Safari/537.36 OPR/46.0.2207.0 OMI/4.20.3.54.Catcher2.147 HbbTV/1.5.1 ( DRM; Eurofins_Digital_Testing; Terminal_Model_A_2019-01-25;V0000.01.00A.K0529;HE55A6103FUWTS; Terminal_Model_A_2019-01-25;) FVC/4.0 ( Eurofins_Digital_Testing; Terminal_Model_
+  os:
+    name: GNU/Linux
+    version: ""
+    platform: ARM
+  client:
+    type: browser
+    name: Opera Devices
+    version: 4.20.3.54
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: Hisense
+    model: HE55A6103FUWT
+  os_family: GNU/Linux
+  browser_family: Opera
