--- a/regexes/device/televisions.yml
+++ b/regexes/device/televisions.yml
@@ -170,7 +170,7 @@ Hi-Level:
 
 # Hisense
 Hisense:
-  regex: 'Hisense'
+  regex: 'Hisense|Eurofins_Digital_Testing'
   device: 'tv'
   models:
     - regex: '(L[A-Z]{2,3}[0-9]{2}[A-Z][0-9]{3,4}[A-Z]{0,6}[0-9]?[A-Z]?)'
