--- a/regexes/device/televisions.yml
+++ b/regexes/device/televisions.yml
@@ -173,6 +173,8 @@ Hisense:
   regex: 'Hisense|Eurofins_Digital_Testing'
   device: 'tv'
   models:
+    - regex: '50ADEVTOOL'
+      model: '50ADEVTOOL'
     - regex: '(L[A-Z]{2,3}[0-9]{2}[A-Z][0-9]{3,4}[A-Z]{0,6}[0-9]?[A-Z]?)'
       model: '$1'
     - regex: '(H[A-Z]?[0-9]{2}[A-Z][0-9]{3,4}[A-Z]{0,4})'
