--- a/Tests/fixtures/tv.yml
+++ b/Tests/fixtures/tv.yml
@@ -8497,3 +8497,21 @@
     model: 50ADEVTOOL
   os_family: GNU/Linux
   browser_family: Opera
+- 
+  user_agent: Mozilla/5.0 (Linux armv7l) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/84.0.4147.140 Safari/537.36 OPR/46.0.2207.0 OMI/4.21.1.75.Honey.64 HbbTV/1.5.1 ( DRM;Hisense;SmartTV_2021;V0000.01.00M.K1104;50A683FEVS;SmartTV_2021;) FVC/5.0 (Hisense;SmartTV_2021;) LaTivu_1.0.1_2021
+  os:
+    name: GNU/Linux
+    version: ""
+    platform: ARM
+  client:
+    type: browser
+    name: Opera Devices
+    version: 4.21.1.75
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: Hisense
+    model: 50A683FEVS
+  os_family: GNU/Linux
+  browser_family: Opera
