--- a/regexes/device/televisions.yml
+++ b/regexes/device/televisions.yml
@@ -175,6 +175,8 @@ Hisense:
   models:
     - regex: '50ADEVTOOL'
       model: '50ADEVTOOL'
+    - regex: '50A683FEVS'
+      model: '50A683FEVS'
     - regex: '(L[A-Z]{2,3}[0-9]{2}[A-Z][0-9]{3,4}[A-Z]{0,6}[0-9]?[A-Z]?)'
       model: '$1'
     - regex: '(H[A-Z]?[0-9]{2}[A-Z][0-9]{3,4}[A-Z]{0,4})'
