Adds detection for Sony KDL-GR1

--- a/Tests/fixtures/tv.yml
+++ b/Tests/fixtures/tv.yml
@@ -8515,3 +8515,21 @@
     model: 50A683FEVS
   os_family: GNU/Linux
   browser_family: Opera
+- 
+  user_agent: Mozilla/5.0 (Linux; Andr0id 10; BRAVIA 4K VH2) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/77.0.3865.120 Safari/537.36 OPR/46.0.2207.0 OMI/4.20.5.35.DIA6.89 HbbTV/1.5.1 ( DRM; Sony; KDL-GR1; PKG1.2175.0255EUA; ; com.sony.HE.G4.4K; )
+  os:
+    name: GNU/Linux
+    version: ""
+    platform: ""
+  client:
+    type: browser
+    name: Opera Devices
+    version: 4.20.5.35
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: Sony
+    model: KDL-GR1
+  os_family: GNU/Linux
+  browser_family: Opera
