--- a/regexes/device/televisions.yml
+++ b/regexes/device/televisions.yml
@@ -517,6 +517,8 @@ Sony:
       model: 'KD-49X8005C'
     - regex: 'KDL-40W660E'
       model: 'KDL-40W660E'
+    - regex: 'KDL-GR1'
+      model: 'KDL-GR1'
     - regex: '(KDL?-?[0-9]{2}[A-Z]{1,2}[0-9]{1,5})'
       model: '$1'
 
