Adds detection for Sony BRAVIA 4K VH2 and improves detection for Android operating system

--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -139,11 +139,15 @@
   name: 'Android'
   version: ''
 
+- regex: 'Linux; Andr0id[; ](\d+[\.\d]*)'
+  name: 'Android'
+  version: '$1'
+
 # Inverted Android
 - regex: 'Linux; diordnA[; ](\d+[\.\d]*)'
   name: 'Android'
   version: '$1'
-
+ 
 ##########
 # AmigaOS
 ##########
