--- a/Tests/fixtures/tv.yml
+++ b/Tests/fixtures/tv.yml
@@ -8551,3 +8551,21 @@
     model: BRAVIA 4K VH2
   os_family: Android
   browser_family: Opera
+- 
+  user_agent: Mozilla/5.0 (Linux; Andr0id 10; BRAVIA VH1) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/84.0.4147.125 Safari/537.36 OPR/46.0.2207.0 OMI/4.21.0.273.DIA6.105 HbbTV/1.5.1 ( DRM; Sony; BRAVIA_VH1; unknown; unknown; mt5895; ) FVC/6.0 (Sony;mt5895;)
+  os:
+    name: Android
+    version: "10"
+    platform: ""
+  client:
+    type: browser
+    name: Opera Devices
+    version: 4.21.0.273
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: Sony
+    model: BRAVIA VH1
+  os_family: Android
+  browser_family: Opera
