--- a/regexes/device/televisions.yml
+++ b/regexes/device/televisions.yml
@@ -519,7 +519,7 @@ Sony:
       model: 'KDL-40W660E'
     - regex: 'KDL-GR1'
       model: 'KDL-GR1'
-    - regex: 'BRAVIA (VH1|4K UR2|4K VH2)'
+    - regex: 'BRAVIA (VH1|4K VH2)'
       model: 'BRAVIA $1'
     - regex: '(KDL?-?[0-9]{2}[A-Z]{1,2}[0-9]{1,5})'
       model: '$1'
