Improves detection for Fire OS and adds detection for JVC 4K (2019)

--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -1728,10 +1728,17 @@
     short_name: FEN
     version: ""
     platform: ""
-- 
+-
   user_agent: Mozilla/5.0 (WebOS; Linux/SmartTV) AppleWebKit/537.36 (KHTML, likeGecko) Chrome/53.0.2785.34 Safari/537.36 HbbTV/1.4.1 ( DRM; LGE; 43UM71007LB; WEBOS4.5 03.50.90; W45_K5LP; DTV_W19P;)
   os:
     name: webOS
     short_name: WOS
     version: "4.5"
+    platform: ""
+-
+  user_agent: Mozilla/5.0 (Linux; Andr0id 9; AFTSO001) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/84.0.4147.125 Safari/537.36 OPR/46.0.2207.0 OMI/4.21.0.273.release HbbTV/1.5.1 ( DRM;Amazon;sophia;unknown;unknown;sophia;) FVC/6.0 (Amazon;sophia;) smarttv_AFTSO001_Build_0019126349446_Chromium_84.0.4147.125
+  os:
+    name: Fire OS
+    short_name: FIR
+    version: ""
     platform: ""
