--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -104,6 +104,10 @@
   name: 'Fire OS'
   version: '$1'
 
+- regex: 'AFTSO001'
+  name: 'Fire OS'
+  version: ''
+
 - regex: 'FydeOS'
   name: 'FydeOS'
   version: ''
