--- a/Tests/fixtures/tv.yml
+++ b/Tests/fixtures/tv.yml
@@ -8569,3 +8569,21 @@
     model: BRAVIA VH1
   os_family: Android
   browser_family: Opera
+- 
+  user_agent: Mozilla/5.0 (Linux; Andr0id 9; AFTSO001) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/84.0.4147.125 Safari/537.36 OPR/46.0.2207.0 OMI/4.21.0.273.release HbbTV/1.5.1 ( DRM;Amazon;sophia;unknown;unknown;sophia;) FVC/6.0 (Amazon;sophia;) smarttv_AFTSO001_Build_0019126349446_Chromium_84.0.4147.125
+  os:
+    name: Fire OS
+    version: ""
+    platform: ""
+  client:
+    type: browser
+    name: Opera Devices
+    version: 4.21.0.273
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: JVC
+    model: 4K (2019)
+  os_family: Android
+  browser_family: Opera
