--- a/Tests/fixtures/tv.yml
+++ b/Tests/fixtures/tv.yml
@@ -8605,3 +8605,21 @@
     model: KDL-GN5
   os_family: Android
   browser_family: Opera
+- 
+  user_agent: Mozilla/5.0 (Linux; Andr0id 9; BRAVIA VH1 Build/PTT1.190515.001.S4) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/67.0.3396.99 Safari/537.36 OPR/46.0.2207.0 OMI/4.13.5.431.DIA5HBBTV.94 HbbTV/1.5.1 ( DRM; Sony; KDL-GN6; PKG1.0286.0002EUA; ; com.sony.HE.G4.4K; )
+  os:
+    name: Android
+    version: "9"
+    platform: ""
+  client:
+    type: browser
+    name: Opera Devices
+    version: 4.13.5.431
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: Sony
+    model: KDL-GN6
+  os_family: Android
+  browser_family: Opera
