--- a/Tests/fixtures/tv.yml
+++ b/Tests/fixtures/tv.yml
@@ -8623,3 +8623,21 @@
     model: KDL-GN6
   os_family: Android
   browser_family: Opera
+- 
+  user_agent: Mozilla/5.0 (Linux; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/47.0.2526.106 Safari/537.36 SRAF/4.0 HbbTV/1.4.1 ( DRM; MStar; 2KTV18; 1.0; 1.0; com.mstarsemi.smarttv; ) CE-HTML/1.0 FVC/3.0 (MStar; com.mstarsemi.smarttv; )
+  os:
+    name: GNU/Linux
+    version: ""
+    platform: x64
+  client:
+    type: browser
+    name: Seraphic Sraf
+    version: "4.0"
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: MStar
+    model: 2KTV18
+  os_family: GNU/Linux
+  browser_family: Chrome
