--- a/regexes/device/televisions.yml
+++ b/regexes/device/televisions.yml
@@ -353,8 +353,8 @@ MStar:
   regex: 'MStar[;,]'
   device: 'tv'
   models:
-    - regex: '2KTV18'
-      model: '2KTV18'
+    - regex: '([24])KTV18'
+      model: '$1KTV18'
 
 # Nordmende
 Nordmende:
