Improves detection for TD Systems smart tvs

--- a/Tests/fixtures/tv.yml
+++ b/Tests/fixtures/tv.yml
@@ -8659,3 +8659,39 @@
     model: 4KTV18
   os_family: GNU/Linux
   browser_family: Chrome
+- 
+  user_agent: Mozilla/5.0 (Linux; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/47.0.2526.106 Safari/537.36 SRAF/4.0 HbbTV/1.4.1 ( DRM; TDSystems; SmartTV2019; v4.0; v1.0; SERIEX9; ) CE-HTML/1.0
+  os:
+    name: GNU/Linux
+    version: ""
+    platform: x64
+  client:
+    type: browser
+    name: Seraphic Sraf
+    version: "4.0"
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: TD Systems
+    model: Smart TV (2019)
+  os_family: GNU/Linux
+  browser_family: Chrome
+- 
+  user_agent: Mozilla/5.0 (Linux; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/47.0.2526.106 Safari/537.36 SRAF/4.0 HbbTV/1.4.1 ( DRM; TDSystems; SmartTV2020; v4.0; v1.0; SERIE10; ) CE-HTML/1.0
+  os:
+    name: GNU/Linux
+    version: ""
+    platform: x64
+  client:
+    type: browser
+    name: Seraphic Sraf
+    version: "4.0"
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: TD Systems
+    model: Smart TV (2020)
+  os_family: GNU/Linux
+  browser_family: Chrome
