--- a/regexes/device/televisions.yml
+++ b/regexes/device/televisions.yml
@@ -536,6 +536,14 @@ Sony:
     - regex: '(KDL?-?[0-9]{2}[A-Z]{1,2}[0-9]{1,5})'
       model: '$1'
 
+# TD Systems
+'TD Systems':
+  regex: 'TDSystems[;,]'
+  device: 'tv'
+  models:
+    - regex: 'SmartTV(2019|2020)'
+      model: 'Smart TV ($1)'
+
 # Technika
 Technika:
   regex: 'TECHNIKA'
