--- a/Tests/fixtures/tv.yml
+++ b/Tests/fixtures/tv.yml
@@ -8695,3 +8695,21 @@
     model: Smart TV (2020)
   os_family: GNU/Linux
   browser_family: Chrome
+- 
+  user_agent: Mozilla/5.0 (Linux; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/47.0.2526.106 Safari/537.36 SRAF/4.0 HbbTV/1.5.1 ( DRM; Hisense; SmartTV_2019_1; V0000.01.00a.J0603; MICALIDVB6886; SmartTV_2019_1; ) LaTivu_1.0.1_2019 CE-HTML/1.0 FVC/4.0 (Hisense; SmartTV_2019_1; )
+  os:
+    name: GNU/Linux
+    version: ""
+    platform: x64
+  client:
+    type: browser
+    name: Seraphic Sraf
+    version: "4.0"
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: Hisense
+    model: MICALIDVB6886
+  os_family: GNU/Linux
+  browser_family: Chrome
