Adds detection for LG 43LJ614V-ZA

--- a/Tests/fixtures/tv.yml
+++ b/Tests/fixtures/tv.yml
@@ -8713,3 +8713,21 @@
     model: MICALIDVB6886
   os_family: GNU/Linux
   browser_family: Chrome
+- 
+  user_agent: Mozilla/5.0 (Web0S; Linux/SmartTV) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/38.0.2125.122 Safari/537.36 HbbTV/1.2.1 ( DRM; LGE; 43LJ614V-ZA; WEBOS3.5 04.70.50; W3_M2R;)
+  os:
+    name: webOS
+    version: "3.5"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 38.0.2125.122
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: LG
+    model: 43LJ614V-ZA
+  os_family: Other Mobile
+  browser_family: Chrome
