--- a/regexes/device/televisions.yml
+++ b/regexes/device/televisions.yml
@@ -293,6 +293,8 @@ LG:
       model: 'OLED65C8PLA'
     - regex: '43LJ614V-ZA'
       model: '43LJ614V-ZA'
+    - regex: '32LM'
+      model: '32LM'
     - regex: '(NetCast [0-9]{1}.[0-9]{1}|GLOBAL_PLAT3)'
       model: '$1'
     - regex: '(OLED[0-9]{2}[A-Z][0-9][A-Z])'
