--- a/Tests/fixtures/tv.yml
+++ b/Tests/fixtures/tv.yml
@@ -8749,3 +8749,21 @@
     model: 32LM
   os_family: Other Mobile
   browser_family: Chrome
+- 
+  user_agent: Mozilla/5.0 (Web0S; Linux/SmartTV) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/53.0.2785.34 Safari/537.36 HbbTV/1.4.1 ( DRM; LGE; 32LM6300PLA; WEBOS4.5 04.72.25; W45_M3R; DTV_W19R;) FVC/3.0 (LGE; WEBOS4.5 ;)
+  os:
+    name: webOS
+    version: "4.5"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 53.0.2785.34
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: LG
+    model: 32LM6300PLA
+  os_family: Other Mobile
+  browser_family: Chrome
