Adds detection for LG 55SK850V-ZA

--- a/regexes/device/televisions.yml
+++ b/regexes/device/televisions.yml
@@ -295,6 +295,8 @@ LG:
       model: 'OLED65C8PLA'
     - regex: '43LJ614V-ZA'
       model: '43LJ614V-ZA'
+    - regex: '55SK850V-ZA'
+      model: '55SK850V-ZA'
     - regex: '32LM6300PLA'
       model: '32LM6300PLA'
     - regex: '32LM'
