--- a/Tests/fixtures/tv.yml
+++ b/Tests/fixtures/tv.yml
@@ -8803,3 +8803,21 @@
     model: 55SK850V-ZA
   os_family: Other Mobile
   browser_family: Chrome
+- 
+  user_agent: Mozilla/5.0 (Web0S; Linux/SmartTV) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/53.0.2785.34 Safari/537.36 HbbTV/1.4.1 ( DRM; LGE; 55UK6400PLF; WEBOS4.0 05.10.45; W4_LM18A; W4_LM18A;)
+  os:
+    name: webOS
+    version: "4.0"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 53.0.2785.34
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: LG
+    model: 55UK6400PLF
+  os_family: Other Mobile
+  browser_family: Chrome
