--- a/regexes/device/televisions.yml
+++ b/regexes/device/televisions.yml
@@ -289,6 +289,8 @@ LG:
       model: '43UK6300MLB'
     - regex: '43UK6400PLF'
       model: '43UK6400PLF'
+    - regex: '55UK6400PLF'
+      model: '55UK6400PLF'
     - regex: '43UM71007LB'
       model: '43UM71007LB'
     - regex: 'OLED65C8PLA'
