--- a/regexes/device/televisions.yml
+++ b/regexes/device/televisions.yml
@@ -293,6 +293,8 @@ LG:
       model: '55UK6400PLF'
     - regex: '43UM71007LB'
       model: '43UM71007LB'
+    - regex: '55UM7250PVA'
+      model: '55UM7250PVA'
     - regex: 'OLED65C8PLA'
       model: 'OLED65C8PLA'
     - regex: '43LJ614V-ZA'
