Adds detection for LG 65UM7600PLB

--- a/regexes/device/televisions.yml
+++ b/regexes/device/televisions.yml
@@ -295,6 +295,8 @@ LG:
       model: '43UM71007LB'
     - regex: '55UM7250PVA'
       model: '55UM7250PVA'
+    - regex: '65UM7600PLB'
+      model: '65UM7600PLB'
     - regex: 'OLED65C8PLA'
       model: 'OLED65C8PLA'
     - regex: '43LJ614V-ZA'
