--- a/Tests/fixtures/tv.yml
+++ b/Tests/fixtures/tv.yml
@@ -8839,3 +8839,21 @@
     model: 55UM7250PVA
   os_family: Other Mobile
   browser_family: Chrome
+- 
+  user_agent: Mozilla/5.0 (Web0S; Linux/SmartTV) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/53.0.2785.34 Safari/537.36 HbbTV/1.4.1 ( DRM; LGE; 65UM7600PLB; WEBOS4.5 02.04.17; W45_K5LP; DTV_W19P;)
+  os:
+    name: webOS
+    version: "4.5"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 53.0.2785.34
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: LG
+    model: 65UM7600PLB
+  os_family: Other Mobile
+  browser_family: Chrome
