Adds detection for Sony KDL32W705B

--- a/Tests/fixtures/tv.yml
+++ b/Tests/fixtures/tv.yml
@@ -8857,3 +8857,21 @@
     model: 65UM7600PLB
   os_family: Other Mobile
   browser_family: Chrome
+- 
+  user_agent: 'Opera/9.80 (Linux armv7l;  HbbTV/1.1.1 (; Sony; KDL32W705B; PKG3.004EUA; 2014;); ) Presto/2.12.407 Version/12.50'
+  os:
+    name: GNU/Linux
+    version: ""
+    platform: ARM
+  client:
+    type: browser
+    name: Opera
+    version: "12.50"
+    engine: Presto
+    engine_version: 2.12.407
+  device:
+    type: tv
+    brand: Sony
+    model: KDL32W705B
+  os_family: GNU/Linux
+  browser_family: Opera
