--- a/regexes/device/televisions.yml
+++ b/regexes/device/televisions.yml
@@ -539,6 +539,8 @@ Sony:
   regex: 'Sony'
   device: 'tv'
   models:
+    - regex: 'KDL32W705B'
+      model: 'KDL32W705B'
     - regex: 'KD-43X8305C'
       model: 'KD-43X8305C'
     - regex: 'KD-49X8005C'
