--- a/Tests/fixtures/tv.yml
+++ b/Tests/fixtures/tv.yml
@@ -8875,3 +8875,21 @@
     model: KDL32W705B
   os_family: GNU/Linux
   browser_family: Opera
+- 
+  user_agent: Mozilla/5.0 (X11; Linux armv7l) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/74.0.3729.108 Odin/74.3729.2.10 Safari/537.36 HbbTV/1.5.1 ( DRM; Hisense; 55U62QGAVT; V0000.01.00G.K1130; 55U62QGAVT; SmartTV_2021A;)
+  os:
+    name: GNU/Linux
+    version: ""
+    platform: ARM
+  client:
+    type: browser
+    name: Odin
+    version: 74.3729.2.10
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: Hisense
+    model: 55U62QGAVT
+  os_family: GNU/Linux
+  browser_family: Chrome
