--- a/regexes/device/televisions.yml
+++ b/regexes/device/televisions.yml
@@ -177,6 +177,8 @@ Hisense:
       model: '50ADEVTOOL'
     - regex: '50A683FEVS'
       model: '50A683FEVS'
+    - regex: '55U62QGAVT'
+      model: '55U62QGAVT'
     - regex: 'MICALIDVB6886'
       model: 'MICALIDVB6886'
     - regex: '(L[A-Z]{2,3}[0-9]{2}[A-Z][0-9]{3,4}[A-Z]{0,6}[0-9]?[A-Z]?)'
