Adds detection for Hisense 55A6100EE

--- a/Tests/fixtures/tv.yml
+++ b/Tests/fixtures/tv.yml
@@ -8893,3 +8893,21 @@
     model: 55U62QGAVT
   os_family: GNU/Linux
   browser_family: Chrome
+- 
+  user_agent: Mozilla/5.0 (X11; Linux armv7l) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/57.0.2987.133 Odin/3.2987.2.8 Safari/537.36 HbbTV/1.4.1 ( DRM; Hisense; 55A6100EE; V0000.01.00a.J0901; 55A6100EE; SmartTV_DB2019A;)
+  os:
+    name: GNU/Linux
+    version: ""
+    platform: ARM
+  client:
+    type: browser
+    name: Odin
+    version: 3.2987.2.8
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: Hisense
+    model: 55A6100EE
+  os_family: GNU/Linux
+  browser_family: Chrome
