--- a/regexes/device/televisions.yml
+++ b/regexes/device/televisions.yml
@@ -177,6 +177,8 @@ Hisense:
       model: '50ADEVTOOL'
     - regex: '50A683FEVS'
       model: '50A683FEVS'
+    - regex: '55A6100EE'
+      model: '55A6100EE'
     - regex: '55U62QGAVT'
       model: '55U62QGAVT'
     - regex: 'MICALIDVB6886'
