--- a/regexes/device/televisions.yml
+++ b/regexes/device/televisions.yml
@@ -181,6 +181,8 @@ Hisense:
       model: '55A6100EE'
     - regex: '55U62QGAVT'
       model: '55U62QGAVT'
+    - regex: '50A6502EA'
+      model: '50A6502EA'
     - regex: 'MICALIDVB6886'
       model: 'MICALIDVB6886'
     - regex: '(L[A-Z]{2,3}[0-9]{2}[A-Z][0-9]{3,4}[A-Z]{0,6}[0-9]?[A-Z]?)'
