--- a/Tests/fixtures/tv.yml
+++ b/Tests/fixtures/tv.yml
@@ -8983,3 +8983,93 @@
     model: OLED77G1PVA
   os_family: Other Mobile
   browser_family: Chrome
+- 
+  user_agent: Mozilla/5.0 (Web0S; Linux/SmartTV) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/68.0.3440.106 Safari/537.36 HbbTV/1.5.1 ( DRM; LGE/SQY/RCA; XU43WT180N; WEBOS5.0 03.21.04; W50_K6LP; DTV_C20P;)
+  os:
+    name: webOS
+    version: "5.0"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 68.0.3440.106
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: LG
+    model: XU43WT180N
+  os_family: Other Mobile
+  browser_family: Chrome
+- 
+  user_agent: Mozilla/5.0 (Web0S; Linux/SmartTV) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/68.0.3440.106 Safari/537.36 HbbTV/1.5.1 ( DRM; LGE; 50UN7340PVC; WEBOS5.0 03.21.06; W50_K6LP; DTV_W20P;)
+  os:
+    name: webOS
+    version: "5.0"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 68.0.3440.106
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: LG
+    model: 50UN7340PVC
+  os_family: Other Mobile
+  browser_family: Chrome
+- 
+  user_agent: Mozilla/5.0 (Web0S; Linux/SmartTV) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/68.0.3440.106 Safari/537.36 HbbTV/1.5.1 ( DRM; LGE; 55NANO916NA; WEBOS5.0 03.11.05; W50_K6HP; DTV_W20H;)
+  os:
+    name: webOS
+    version: "5.0"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 68.0.3440.106
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: LG
+    model: 55NANO916NA
+  os_family: Other Mobile
+  browser_family: Chrome
+- 
+  user_agent: Mozilla/5.0 (Web0S; Linux/SmartTV) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/68.0.3440.106 Safari/537.36 HbbTV/1.5.1 ( DRM; LGE; 65NANO90; WEBOS5.0 03.21.05; W50_K6HP; DTV_W20H;)
+  os:
+    name: webOS
+    version: "5.0"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 68.0.3440.106
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: LG
+    model: 65NANO90
+  os_family: Other Mobile
+  browser_family: Chrome
+- 
+  user_agent: Mozilla/5.0 (Web0S; Linux/SmartTV) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/68.0.3440.106 Safari/537.36 HbbTV/1.5.1 ( DRM; LGE; 65UN81006LB; WEBOS5.0 02.01.11; W50_K6LP; DTV_W20P;)
+  os:
+    name: webOS
+    version: "5.0"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 68.0.3440.106
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: LG
+    model: 65UN81006LB
+  os_family: Other Mobile
+  browser_family: Chrome
