--- a/regexes/device/televisions.yml
+++ b/regexes/device/televisions.yml
@@ -311,6 +311,16 @@ LG:
       model: 'OLED55C19LA'
     - regex: 'OLED77G1PVA'
       model: 'OLED77G1PVA'
+    - regex: 'XU43WT180N'
+      model: 'XU43WT180N'
+    - regex: '50UN7340PVC'
+      model: '50UN7340PVC'
+    - regex: '55NANO916NA'
+      model: '55NANO916NA'
+    - regex: '65NANO90'
+      model: '65NANO90'
+    - regex: '65UN81006LB'
+      model: '65UN81006LB'
     - regex: '43LJ614V-ZA'
       model: '43LJ614V-ZA'
     - regex: '55SK850V-ZA'
