Adds detection for Facebook brand and Facebook Portal TV

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -4691,6 +4691,12 @@ Essentielb:
     - regex: 'Wooze[_ ]?((?:I55?|I45|X?L))(?:[);/ ]|$)'
       model: 'Wooze $1'
 
+# Facebook
+Facebook:
+  regex: 'PortalTV'
+  device: 'tv'
+  model: 'Portal TV'
+
 # Rikomagic
 Rikomagic:
   regex: 'MK(80[28][^/;]*) Build'
