Improves detection for MTC and improves detection for Android operating system

--- a/Tests/fixtures/tv.yml
+++ b/Tests/fixtures/tv.yml
@@ -9109,3 +9109,39 @@
     model: SKWE20E21
   os_family: GNU/Linux
   browser_family: Chrome
+- 
+  user_agent: Mozilla/5.0 (X11; Linux armv8l) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/55.0.2883.91 Safari/537.36 HbbTV/1.5.1 ( DRM; MTC; 2K_Android_TV_V01; V0.24.7.2.M001; MS66830-ZC01-01; Reference_2K19;) FVC/4.0 (MTC; Reference_2K19;)
+  os:
+    name: Android
+    version: ""
+    platform: ARM
+  client:
+    type: browser
+    name: Chrome
+    version: 55.0.2883.91
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: MTC
+    model: 2K Android TV
+  os_family: Android
+  browser_family: Chrome
+- 
+  user_agent: Mozilla/5.0 (X11; Linux armv8l) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/55.0.2883.91 Safari/537.36 HbbTV/1.5.1 ( DRM; MTC; 4K_Android_TV_V01; 1.001; MS68860-ZC01-01; Reference_2K19;) FVC/4.0 (MTC; Reference_2K19;)
+  os:
+    name: Android
+    version: ""
+    platform: ARM
+  client:
+    type: browser
+    name: Chrome
+    version: 55.0.2883.91
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: MTC
+    model: 4K Android TV
+  os_family: Android
+  browser_family: Chrome
