--- a/regexes/device/televisions.yml
+++ b/regexes/device/televisions.yml
@@ -396,6 +396,14 @@ MStar:
     - regex: '([24])KTV18'
       model: '$1KTV18'
 
+# MTC
+MTC:
+  regex: 'MTC[;,]'
+  device: 'tv'
+  models:
+    - regex: '([24])K_Android_TV_V01'
+      model: '$1K Android TV'
+
 # Nordmende
 Nordmende:
   regex: 'NORDMENDE[;,]'
