--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -143,6 +143,10 @@
   name: 'Android'
   version: ''
 
+- regex: '([24])K_Android_TV_V01'
+  name: 'Android'
+  version: ''
+
 - regex: 'Linux; Andr0id[; ](\d+[\.\d]*)'
   name: 'Android'
   version: '$1'
