Improves detection for MediaTek

--- a/Tests/fixtures/tv.yml
+++ b/Tests/fixtures/tv.yml
@@ -9145,3 +9145,21 @@
     model: 4K Android TV
   os_family: Android
   browser_family: Chrome
+- 
+  user_agent: Mozilla/5.0 (X11; Linux armv8l) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/55.0.2883.91 Safari/537.36 HbbTV/1.5.1 ( DRM; MediaTek; MT5887v1; 1.000; 0000-1111 2222-3333; Reference_2K19;) FVC/4.0 (MediaTek; Reference_2K19;) LaTivu_3.0.0_2019
+  os:
+    name: GNU/Linux
+    version: ""
+    platform: ARM
+  client:
+    type: browser
+    name: Chrome
+    version: 55.0.2883.91
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: MediaTek
+    model: MT5887
+  os_family: GNU/Linux
+  browser_family: Chrome
