--- a/regexes/device/televisions.yml
+++ b/regexes/device/televisions.yml
@@ -366,7 +366,7 @@ Luxor:
 
 # MediaTek
 MediaTek:
-  regex: 'MTK'
+  regex: 'MTK|MediaTek;'
   device: 'tv'
   models:
     - regex: '(MT[0-9]{4})'
