fix(device) detect brand Asus models: ZenWatch, ZenWatch 2

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -2315,6 +2315,11 @@ Asus:
     - regex: '(?:ASUS_)?(?:I003DD?|ZS661KS)'
       model: 'ROG Phone 3'
 
+    # watch detections
+    - regex: '(?:ASUS_)?ZenWatch( 2)?'
+      device: 'wearable'
+      model: 'ZenWatch$1'
+
     # general detections
     - regex: 'Asus(?:-|;)?([a-z0-9]+)'
       model: '$1'
