Adds detection for LG LM21U, 75NANO996PA, KEY0000002E, KEY0000002F, KEY0000003B, KEY0000003F, KEY0000213F, KEY0000213F1z

--- a/Tests/fixtures/tv.yml
+++ b/Tests/fixtures/tv.yml
@@ -9325,3 +9325,147 @@
     model: 60UP8000PTA
   os_family: Other Mobile
   browser_family: Chrome
+- 
+  user_agent: Mozilla/5.0 (Web0S; Linux/SmartTV) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/68.0.3440.106 Safari/537.36 HbbTV/1.5.1 (+DRM; LGE; LM21U; WEBOS5.0 02.31.01; W50_E60; DTV_W20E;) FVC/5.0 (LGE; WEBOS5.0 ;)
+  os:
+    name: webOS
+    version: "5.0"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 68.0.3440.106
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: LG
+    model: LM21U
+  os_family: Other Mobile
+  browser_family: Chrome
+- 
+  user_agent: Mozilla/5.0 (Web0S; Linux/SmartTV) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/79.0.3945.79 Safari/537.36 HbbTV/1.5.1 (+DRM; LGE; 75NANO996PA; WEBOS6.0 03.00.13; W60_E60N; DTV_W21K;)
+  os:
+    name: webOS
+    version: "6.0"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 79.0.3945.79
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: LG
+    model: 75NANO996PA
+  os_family: Other Mobile
+  browser_family: Chrome
+- 
+  user_agent: Mozilla/5.0 (Web0S; Linux/SmartTV) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/79.0.3945.79 Safari/537.36 HbbTV/1.5.1 (+DRM; LGE; KEY0000002E; WEBOS6.0 03.00.33; W60_LM21U; DTV_W21U;)
+  os:
+    name: webOS
+    version: "6.0"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 79.0.3945.79
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: LG
+    model: KEY0000002E
+  os_family: Other Mobile
+  browser_family: Chrome
+- 
+  user_agent: Mozilla/5.0 (Web0S; Linux/SmartTV) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/79.0.3945.79 Safari/537.36 HbbTV/1.5.1 (+DRM; LGE; KEY0000002F; WEBOS6.0 02.03.35; W60_K7LP; DTV_W21P;)
+  os:
+    name: webOS
+    version: "6.0"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 79.0.3945.79
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: LG
+    model: KEY0000002F
+  os_family: Other Mobile
+  browser_family: Chrome
+- 
+  user_agent: Mozilla/5.0 (Web0S; Linux/SmartTV) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/79.0.3945.79 Safari/537.36 HbbTV/1.5.1 (+DRM; LGE; KEY0000003B; WEBOS6.0 02.03.58; W60_E60N; DTV_W21K;) LaTivu_1.0.1_2021
+  os:
+    name: webOS
+    version: "6.0"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 79.0.3945.79
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: LG
+    model: KEY0000003B
+  os_family: Other Mobile
+  browser_family: Chrome
+- 
+  user_agent: Mozilla/5.0 (Web0S; Linux/SmartTV) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/79.0.3945.79 Safari/537.36 HbbTV/1.5.1 (+DRM; LGE; KEY0000003F; WEBOS6.0 02.03.94; W60_E60N; DTV_W21K;)
+  os:
+    name: webOS
+    version: "6.0"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 79.0.3945.79
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: LG
+    model: KEY0000003F
+  os_family: Other Mobile
+  browser_family: Chrome
+- 
+  user_agent: Mozilla/5.0 (Web0S; Linux/SmartTV) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/79.0.3945.79 Safari/537.36 HbbTV/1.5.1 (+DRM; LGE; KEY0000213F; WEBOS6.0 03.00.07; W60_O20N; DTV_W21O;) FVC/5.0 (LGE; WEBOS6.0 ;)
+  os:
+    name: webOS
+    version: "6.0"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 79.0.3945.79
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: LG
+    model: KEY0000213F
+  os_family: Other Mobile
+  browser_family: Chrome
+- 
+  user_agent: Mozilla/5.0 (Web0S; Linux/SmartTV) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/79.0.3945.79 Safari/537.36 HbbTV/1.5.1 (+DRM; LGE; KEY0000213F1z; WEBOS6.0 00.00.00; W60_O20N; DTV_W21O;)
+  os:
+    name: webOS
+    version: "6.0"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 79.0.3945.79
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: LG
+    model: KEY0000213F1z
+  os_family: Other Mobile
+  browser_family: Chrome
