--- a/regexes/device/televisions.yml
+++ b/regexes/device/televisions.yml
@@ -329,6 +329,8 @@ LG:
       model: '65NANO90'
     - regex: '75NANO996NA'
       model: '75NANO996NA'
+    - regex: '75NANO996PA'
+      model: '75NANO996PA'
     - regex: '65UN81006LB'
       model: '65UN81006LB'
     - regex: '43LJ614V-ZA'
@@ -345,9 +347,14 @@ LG:
       model: '60UP77506LA'
     - regex: '60UP8000PTA'
       model: '60UP8000PTA'
-
-
-      
+    - regex: 'KEY0000213F1z'
+      model: 'KEY0000213F1z'
+    - regex: 'KEY0000213F'
+      model: 'KEY0000213F'
+    - regex: 'KEY000000(2E|2F|3B|3F)'
+      model: 'KEY000000$1'
+    - regex: 'LM21U'
+      model: 'LM21U'
     - regex: '32LM'
       model: '32LM'
     - regex: '(NetCast [0-9]{1}.[0-9]{1}|GLOBAL_PLAT3)'
