--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -143,7 +143,7 @@
   name: 'Android'
   version: ''
 
-- regex: '([24])K_Android_TV_V01'
+- regex: '([24])K_Android_TV_V01|UMC_2KAndroidTV_2019'
   name: 'Android'
   version: ''
 
