--- a/regexes/device/televisions.yml
+++ b/regexes/device/televisions.yml
@@ -303,20 +303,6 @@ LG:
       model: '55UM7250PVA'
     - regex: '65UM7600PLB'
       model: '65UM7600PLB'
-    - regex: 'OLED65C8PLA'
-      model: 'OLED65C8PLA'
-    - regex: 'OLED55A16LA'
-      model: 'OLED55A16LA'
-    - regex: 'OLED55C19LA'
-      model: 'OLED55C19LA'
-    - regex: 'OLED55CX'
-      model: 'OLED55CX'
-    - regex: 'OLED65CX6LA'
-      model: 'OLED65CX6LA'
-    - regex: 'OLED77G1PVA'
-      model: 'OLED77G1PVA'
-    - regex: 'OLED77GX6LA'
-      model: 'OLED77GX6LA'
     - regex: 'XU43WT180N'
       model: 'XU43WT180N'
     - regex: '50UN7340PVC'
@@ -359,7 +345,11 @@ LG:
       model: '32LM'
     - regex: '(NetCast [0-9]{1}.[0-9]{1}|GLOBAL_PLAT3)'
       model: '$1'
+    - regex: '(OLED[0-9]{2}[A-Z0-9]{3}[A-Z]{2})'
+      model: '$1'
     - regex: '(OLED[0-9]{2}[A-Z][0-9][A-Z])'
+      model: '$1'
+    - regex: '(OLED[0-9]{2}[A-Z0-9]{2})'
       model: '$1'
     - regex: 'LGE;? ?([0-9]{2}[A-Z]{2}[0-9]{2,4}[A-Z]?)'
       model: '$1'
