Improves detection for LG

--- a/regexes/device/televisions.yml
+++ b/regexes/device/televisions.yml
@@ -291,48 +291,12 @@ LG:
   regex: 'LGE'
   device: 'tv'
   models:
-    - regex: '43UK6300MLB'
-      model: '43UK6300MLB'
-    - regex: '43UK6400PLF'
-      model: '43UK6400PLF'
-    - regex: '55UK6400PLF'
-      model: '55UK6400PLF'
-    - regex: '43UM71007LB'
-      model: '43UM71007LB'
-    - regex: '55UM7250PVA'
-      model: '55UM7250PVA'
-    - regex: '65UM7600PLB'
-      model: '65UM7600PLB'
     - regex: 'XU43WT180N'
       model: 'XU43WT180N'
-    - regex: '50UN7340PVC'
-      model: '50UN7340PVC'
-    - regex: '55NANO916NA'
-      model: '55NANO916NA'
-    - regex: '65NANO906PA'
-      model: '65NANO906PA'
-    - regex: '65NANO90'
-      model: '65NANO90'
-    - regex: '75NANO996NA'
-      model: '75NANO996NA'
-    - regex: '75NANO996PA'
-      model: '75NANO996PA'
-    - regex: '65UN81006LB'
-      model: '65UN81006LB'
     - regex: '43LJ614V-ZA'
       model: '43LJ614V-ZA'
     - regex: '55SK850V-ZA'
       model: '55SK850V-ZA'
-    - regex: '32LM6300PLA'
-      model: '32LM6300PLA'
-    - regex: '55UP7700PTA'
-      model: '55UP7700PTA'
-    - regex: '55UP80006LA'
-      model: '55UP80006LA'
-    - regex: '60UP77506LA'
-      model: '60UP77506LA'
-    - regex: '60UP8000PTA'
-      model: '60UP8000PTA'
     - regex: 'KEY0000213F1z'
       model: 'KEY0000213F1z'
     - regex: 'KEY0000213F'
@@ -350,6 +314,12 @@ LG:
     - regex: '(OLED[0-9]{2}[A-Z][0-9][A-Z])'
       model: '$1'
     - regex: '(OLED[0-9]{2}[A-Z0-9]{2})'
+      model: '$1'
+    - regex: '([0-9]{2}[A-Z]{2}[0-9]{4}[A-Z0-9]{1}[A-Z]{2})'
+      model: '$1'
+    - regex: '([0-9]{2}NANO[0-9]{3}[A-Z]{2})'
+      model: '$1'
+    - regex: '([0-9]{2}NANO[0-9]{2})'
       model: '$1'
     - regex: 'LGE;? ?([0-9]{2}[A-Z]{2}[0-9]{2,4}[A-Z]?)'
       model: '$1'
