--- a/Tests/fixtures/tv.yml
+++ b/Tests/fixtures/tv.yml
@@ -3979,8 +3979,8 @@
 - 
   user_agent: Mozilla/5.0 (Linux; Andr0id 9.0; TPM191E Build/PTT1.181130.001) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/49.0.2623.112 Safari/537.36 OPR/32.0.2128.0 OMI/4.8.0.129.Sprinter7.124
   os:
-    name: GNU/Linux
-    version: ""
+    name: Android
+    version: "9.0"
     platform: ""
   client:
     type: browser
@@ -3992,7 +3992,7 @@
     type: tv
     brand: Philips
     model: TPM191E
-  os_family: GNU/Linux
+  os_family: Android
   browser_family: Opera
 - 
   user_agent: Mozilla/5.0 (Linux; U; Android 4.1.1; en-gb; POV_TV-HDMI-KB-01 Build/JRO03H) AppleWebKit/534.30 (KHTML, like Gecko) Version/4.0 Safari/534.30
@@ -6119,8 +6119,8 @@
 - 
   user_agent: Mozilla/5.0 (Linux; Andr0id 6.0.1; MIBOX3 Build/MHC19J) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/53.0.2785.143 Safari/537.36 OPR/40.0.2207.0 OMI/4.9.0.59.E9103576.114
   os:
-    name: GNU/Linux
-    version: ""
+    name: Android
+    version: "6.0.1"
     platform: ""
   client:
     type: browser
@@ -6132,7 +6132,7 @@
     type: tv
     brand: Xiaomi
     model: Mi Box 3
-  os_family: GNU/Linux
+  os_family: Android
   browser_family: Opera
 - 
   user_agent: Mozilla/5.0 (Linux; Android 5.1; MiBOX3_PRO) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/78.0.3904.90 Mobile Safari/537.36
@@ -6155,8 +6155,8 @@
 - 
   user_agent: Mozilla/5.0 (Linux; Andr0id 8.1; MIBOX4 Build/OPM1.171019.011) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/53.0.2785.143 Safari/537.36 OPR/40.0.2207.0 OMI/4.9.0.59.E9103576.114
   os:
-    name: GNU/Linux
-    version: ""
+    name: Android
+    version: "8.1"
     platform: ""
   client:
     type: browser
@@ -6168,7 +6168,7 @@
     type: tv
     brand: Xiaomi
     model: Mi Box 4
-  os_family: GNU/Linux
+  os_family: Android
   browser_family: Opera
 - 
   user_agent: Mozilla/5.0 (Linux; Android 6.0.1; MiTV4-ANSM0) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/79.0.3945.93 Mobile Safari/537.36
@@ -6227,8 +6227,8 @@
 - 
   user_agent: Mozilla/5.0 (Linux; Andr0id 6.0.1; MiTV4C Build/MHC19J) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/53.0.2785.143 Safari/537.36 OPR/40.0.2207.0 OMI/4.9.0.59.E9103576.114
   os:
-    name: GNU/Linux
-    version: ""
+    name: Android
+    version: "6.0.1"
     platform: ""
   client:
     type: browser
@@ -6240,7 +6240,7 @@
     type: tv
     brand: Xiaomi
     model: MiTV 4C
-  os_family: GNU/Linux
+  os_family: Android
   browser_family: Opera
 - 
   user_agent: Mozilla/5.0 (Linux; Android 9.0; MiTV-MSSP1 Build/PTT1.181019.001) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/57.0.2987.132 Mobile Safari/537.36
@@ -6263,8 +6263,8 @@
 - 
   user_agent: Mozilla/5.0 (Linux; Andr0id 6.0; MiTV4S Build/MRA58K) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/53.0.2785.143 Safari/537.36 OPR/40.0.2207.0 OMI/4.9.0.59.E9103576.114
   os:
-    name: GNU/Linux
-    version: ""
+    name: Android
+    version: "6.0"
     platform: ""
   client:
     type: browser
@@ -6276,13 +6276,13 @@
     type: tv
     brand: Xiaomi
     model: MiTV 4S
-  os_family: GNU/Linux
+  os_family: Android
   browser_family: Opera
 - 
   user_agent: Mozilla/5.0 (Linux; Andr0id 6.0; MiTV4X Build/MRA58K) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/53.0.2785.143 Safari/537.36 OPR/40.0.2207.0 OMI/4.9.0.59.E9103576.114
   os:
-    name: GNU/Linux
-    version: ""
+    name: Android
+    version: "6.0"
     platform: ""
   client:
     type: browser
@@ -6294,7 +6294,7 @@
     type: tv
     brand: Xiaomi
     model: MiTV 4X
-  os_family: GNU/Linux
+  os_family: Android
   browser_family: Opera
 - 
   user_agent: Mozilla/5.0 (Linux; Android 6.0.1; HST 260) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/75.0.3770.101 Safari/537.36
@@ -7259,7 +7259,7 @@
   os:
     name: GNU/Linux
     version: ""
-    platform: ""
+    platform: "ARM"
   client:
     type: browser
     name: T-Browser
@@ -7475,7 +7475,7 @@
   os:
     name: GNU/Linux
     version: ""
-    platform: ""
+    platform: "ARM"
   client:
     type: browser
     name: T-Browser
@@ -8518,8 +8518,8 @@
 - 
   user_agent: Mozilla/5.0 (Linux; Andr0id 10; BRAVIA 4K VH2) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/77.0.3865.120 Safari/537.36 OPR/46.0.2207.0 OMI/4.20.5.35.DIA6.89 HbbTV/1.5.1 ( DRM; Sony; KDL-GR1; PKG1.2175.0255EUA; ; com.sony.HE.G4.4K; )
   os:
-    name: GNU/Linux
-    version: ""
+    name: Android
+    version: "10"
     platform: ""
   client:
     type: browser
@@ -8531,7 +8531,7 @@
     type: tv
     brand: Sony
     model: KDL-GR1
-  os_family: GNU/Linux
+  os_family: Android
   browser_family: Opera
 - 
   user_agent: Mozilla/5.0 (Linux; Andr0id 10; BRAVIA 4K VH2) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/84.0.4147.125 Safari/537.36 OPR/46.0.2207.0 OMI/4.21.0.273.DIA6.106 HbbTV/1.5.1 ( DRM; Sony; BRAVIA_VH2; unknown; unknown; mt5895; ) FVC/6.0 (Sony;mt5895;)
