--- a/Tests/fixtures/tv.yml
+++ b/Tests/fixtures/tv.yml
@@ -3584,7 +3584,7 @@
   device:
     type: tv
     brand: Panasonic
-    model: ""
+    model: "DIGA M9031"
   os_family: GNU/Linux
   browser_family: Opera
 - 
