--- a/regexes/device/televisions.yml
+++ b/regexes/device/televisions.yml
@@ -544,7 +544,7 @@ Skyworth:
 
 # Smart
 Smart:
-  regex: 'Smart(<!_TV)[^a-z]'
+  regex: 'Smart[;,]'
   device: 'tv'
   models:
     - regex: 'Smart; ([^);/]+)'
