feat(app) improved version detection for TikTok IOS

--- a/Tests/fixtures/mobile_apps.yml
+++ b/Tests/fixtures/mobile_apps.yml
@@ -783,3 +783,19 @@
     model: iPhone
   os_family: iOS
   browser_family: Unknown
+-
+  user_agent: TikTok 17.8.1 rv:178102 (iPhone; iOS 14.1; ja_JP) Cronet
+  os:
+    name: iOS
+    version: "14.1"
+    platform: ""
+  client:
+    type: mobile app
+    name: TikTok
+    version: 17.8.1
+  device:
+    type: smartphone
+    brand: Apple
+    model: iPhone
+  os_family: iOS
+  browser_family: Unknown
