--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -272,9 +272,9 @@
   name: 'Procast'
   version: '$1'
 -
-  regex: 'TikTok/(\d+[\.\d]+) CFNetwork'
+  regex: 'TikTok[/ ](\d+\.(?:[\.\d]+))?'
   name: 'TikTok'
-  version: ''
+  version: '$1'
 
 # https://apps.apple.com/app/id393499958
 - regex: 'NAVER/(\d+[\.\d]+) CFNetwork'
