--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -2696,6 +2696,14 @@
     engine: WebKit
     engine_version: "537.36"
 -
+  user_agent: Mozilla/5.0 (Linux x86_64) EkiohFlow/5.11.1.33219 Flow/5.11.1 (like Gecko Firefox/62.0 rv:62.0)
+  client:
+    type: browser
+    name: Flow
+    version: 5.11.1
+    engine: EkiohFlow
+    engine_version: 5.11.1.33219
+-
   user_agent: Mozilla/5.0 (Windows NT 5.1) AppleWebKit/537.16 (KHTML, like Gecko) Chrome/20.0.1207.0 PlayFreeBrowser/2.2.0.0 Safari/537.16
   client:
     type: browser
@@ -2831,6 +2839,30 @@
     version: "2.0"
     engine: Blink
     engine_version: ""
+-
+  user_agent: Mozilla/5.0 (Linux) AppleWebKit/534.51 (KHTML, like Gecko) Ekioh/2.2.4.7-moto-mob Safari/534.51
+  client:
+    type: browser
+    name: Flow
+    version: 2.2.4.7
+    engine: EkiohFlow
+    engine_version: ""
+-
+  user_agent: Mozilla/5.0 (Linux) AppleWebKit/534.51 (KHTML, like Gecko) Ekioh/2.2.4.7-moto-mob Safari/534.51:534 Motorola KreaTV STB VIP1003
+  client:
+    type: browser
+    name: Flow
+    version: 2.2.4.7
+    engine: EkiohFlow
+    engine_version: ""
+-
+  user_agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_0) EkiohFlow/5.7.4.30559 Flow/5.7.4 (like Gecko Firefox/53.0 rv:53.0)
+  client:
+    type: browser
+    name: Flow
+    version: 5.7.4
+    engine: EkiohFlow
+    engine_version: "5.7.4.30559"
 -
   user_agent: Mozilla/5.0 (Unknown; Linux mips) AppleWebkit/536.7 (KHTML, like Gecko) WebShell/1.0.0.0 Safari/536.7 (avvp/ssl; avui/tv; avkb/pc; avrt/html5; avst/off) CE-HTML/1.0 OreganMediaBrowser
   client:
