--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -5,6 +5,19 @@
 # @license http://www.gnu.org/licenses/lgpl.html LGPL v3 or later
 ###############
 
+
+# Flow (https://www.ekioh.com/)
+- regex: 'Flow/(?:(\d+[\.\d]+))'
+  name: 'Flow'
+  version: '$1'
+  engine:
+    default: 'EkiohFlow'
+- regex: 'Ekioh/(?:(\d+[\.\d]+))'
+  name: 'Flow'
+  version: '$1'
+  engine:
+    default: 'EkiohFlow'
+
 # xStand (https://www.adnx.com/)
 - regex: 'xStand/(\d+[\.\d]+)'
   name: 'xStand'
